--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.546.0",
     "mathjs": "^15.0.0",
+    "motion": "^12.23.24",
     "motion-react": "^0.15.0-alpha.1",
     "next": "15.5.6",
     "react": "19.1.0",
