--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mathjs": "^15.0.0",
     "motion": "^12.23.24",
     "motion-react": "^0.15.0-alpha.1",
-    "next": "15.5.6",
+    "next": "^16.0.7",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
